@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.08_dev
 
+Instead of hard-coding listen directive to 127.0.0.1, use the server
+name. [Gozer]
+
 added -defines configuration option, providing a way to pass additional
 -D names to the server for use in <IfDefine> blocks.  [Geoffrey Young]
 
@@ -27,7 +30,7 @@ HTTP/0.9 responses no longer croak, provided $ENV{APACHE_TEST_HTTP_09_OK}
 is true.  [Geoffrey Young]
 
 Hard-code listen directive to 127.0.0.1, solving problems for people
-with IPv4 & IPv6 address until a better solution is found [Gozer]
+with IPv4 & IPv6 address until a better solution is found. [Gozer]
 
 prefix Apache::TestTrace (non-colour mode) messages with the loglevel,
 similar to what Apache does. [Stas]
